[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cams"
version = "0.1.0"
authors = [{name="CaMS Contributors"}]
description = "CaMS: Calibrated Meta-Selection framework for time series forecasting"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["time-series", "forecasting", "meta-learning", "reinforcement-learning", "uncertainty"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/your-org/cams"
Issues = "https://github.com/your-org/cams/issues"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
ignore_missing_imports = true

